--- a/src/template.html
+++ b/src/template.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Welcome to Acme</title>
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
-      {{content}}
+        {{content}}
     </body>
 </html>
